Finalizando js projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+    <!DOCTYPE html>
+<html lang="pt-br" class="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
         </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
         <ul class="animais-lista">
             <li>
@@ -42,45 +42,45 @@
         <div class="animais-descricao animais">
             <section>
                 <h2>Catiorrito 1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
+                <p>Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 </p>
+                <p>Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1  </p>
+                <p>Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1 Catiorrito 1  </p>
             </section>
             <section>
                 <h2>Catiorrito 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicinge fugiat deserunt reiciendis vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequat
             </section>
             <section>
                 <h2>Catiorrito 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
+                <p>Lorem ipsum dolor sit amue saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
+                <p>Lorem ipsum  doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
             </section>
             <section>
                 <h2>Catiorrito 4</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
+                <p>Lorem ipsum dolor sit amet consectetue quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
+                <p>Lorem ipsusectetur adipiecessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dign animi culpa numquam, incidunt pariatur.</p>
             </section>
             <section>
                 <h2>Catiorrito 5</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
+                <p>Lorem ipsum dolor sit amet consectetpe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicinulpa doloribus nulla repellat eius repudiandae fuendis vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipismos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
             </section>
             <section>
                 <h2>Catiorrito 6</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neque at aut vero, quisquam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos consequatur distinctio animi culpa numquam, incidunt pariatur.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque saepe quam neqam molestiae esse, autem ea modi, aperiam voluptatum quibusdam.</p>
+                <p>Lorem ipsum dolor sit, amet conseclit. Necessitatibus asperiores, culpa doloribus nulla repellat eius repudiandae fugiat deserunt reiciendis vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisnumquam, incidunt pariatur.</p>
             </section>
         </div>     
     </section>
 
     
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
         <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
@@ -97,7 +97,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
         <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa-2.jpg">
